# Bio-Aug

./: .gitignore  .pre-commit-config.yaml  ALN-LANGUAGE-SPEC.md  BioAug.Core.BiocompatibleAutonomySecurityLayer.aln  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  README.md  README_Bio-Aug_Biocompatible_Security_Layer.md  SECURITY.md  SECURITY_CONTACT  SECURITY_PGP_KEY.asc  aln_syntax_package_model.m
.github/ISSUE_TEMPLATE/: security_vulnerability.md
.github/workflows/: bioaug_classc_release.yml  bioaug_clinical_ci.yml  bioaug_clinical_dpia_dos.yml  ci.yml
aln/: UnifiedAiAssetRegistry_v1_0_0.aln  ai_asset_index.aln  augtech_neurocity_arvr_clinical_grid_v1_0_0.aln  augtech_neurocity_volume_device_grid_v1_0_0.aln  minimal_bodytrack_biosense_calibration_v1_0_0.aln  minimal_wireless_safety_lockdown_v1_0_0.aln  rem_exclusion_policy_v1_0_0.aln
aln-check/: Cargo.toml
aln-check/src/: lib.rs
aln-cli/: Cargo.toml
aln-cli/src/: main.rs  traceability.rs
aln-cli/tests/: governance_gate_smoke.rs
aln-codegen/: Cargo.toml
aln-codegen/src/: lib.rs
aln-examples/: AU.BioMesh.NetEnvelope.v1.aln
aln-guard-codegen/: Cargo.toml  README.md
aln-guard-codegen/src/: expr_codegen.rs  lib.rs  record_codegen.rs
aln-guard-codegen/tests/: expr_codegen_roundtrip.rs  expr_invariant_codegen.rs  guard_codegen_smoke.rs  quantifier_codegen.rs  quantifier_parsing.rs  record_codegen.rs
aln-lang/: IDE-Handoff.md  README.md
aln-reference/anti-riot/: AU.BioAug.AntiRiot.v1.aln
aln-reference/biomech-augmentation/: AU.BioAug.BiomechCore.v1.aln  AU.BioAug.BiomechGuards.v1.aln  README.md  (+3 more)
aln-syntax/: Cargo.toml  README.md  aln.ebnf  aln.pest
aln-syntax/src/: ast.rs  lib.rs
aln_specs/: AU.BioMesh.NetEnvelope.v1.aln
anti_riot_runtime/: Cargo.toml
anti_riot_runtime/src/: lib.rs
augment-governance/: Cargo.toml
bioaug-clinical/: AST_TODO.md  FORMAL_TODO.md  HSM_TODO.md  README.md  TODO.md
biomech-guards/: Cargo.toml
biomech-guards/src/: lib.rs
biomech-guards/tests/: proptest.rs  smoke.rs
ci/: BRANCH_PROTECTION.md  aln_and_docs_gate.sh  docs_presence_check.sh  local-ci.ps1  nanoswarm_ci.yml
crates/nanoswarm-edge-adapter/: Cargo.toml
crates/nanoswarm-edge-adapter/src/: lib.rs  writer.rs
crates/nanoswarm-edge-adapter/tests/: writer_smoke.rs
crates/nanoswarm-write-api/: Cargo.toml  README.md
crates/nanoswarm-write-api/src/: lib.rs  telemetry.rs
crates/nanoswarm-write-api/src/domain/: guards.rs  mod.rs  models.rs
crates/nanoswarm-write-api/src/service/: authz.rs  executor.rs  mod.rs  router.rs
crates/nanoswarm-write-api/tests/: nanoswarm_smoke.rs
docs/: ALN_PORTABLE_LINTER_USAGE.md  TOKENLESS_DID_USAGE.md  TOKENLESS_DID_VERIFY_USAGE.md  biocompatibility-augmentations-and-bci-eeg-devices.md
guides/: CLINICAL_PLAYBOOK_DEPRESSION.md  CLINICAL_PLAYBOOK_EPILEPSY.md  CLINICAL_PLAYBOOK_PAIN.md  CONSENT_TEMPLATE_CLINICAL.md  CONSENT_TEMPLATE_URBAN_BCI.md  DATA_COLLECTION_SOP_HOME.md  DATA_COLLECTION_SOP_LABS.md  INCIDENT_RESPONSE_RUNBOOK_NEUROMOD.md  NEUROMORPHIC_DATASET_TEMPLATE_V1.md  NEUROMORPHIC_DATASET_TEMPLATE_V2.md  POSTMARKET_SURVEILLANCE_PLAN_NEURONANO.md  RELEASE_CHECKLIST_CLASSC.md  RISK_REGISTER_TEMPLATE_IEC62304.md  SMARTCITY_NEURO_GOVERNANCE_SOP.md  VALIDATION_PLAN_TEMPLATE_CLASSC.md
migrations/: 20250101090000_init.down.sql  20250101090000_init.up.sql
policies/: ai.chat.dos_guard.aln  city.neuro_privacy_guard.aln  city.neurofeedback_loop.aln  forensics.immutable_logs.aln  governance.region_switch.aln  hybrid.ai_human_controller.aln  nano.magnetoelectric_actuators.aln  nano.safety_metrics_guard.aln  nano.tis2pt_bci.aln  nano.wireless_envelope.aln  neuromorphic.compute_envelope.aln  neuromorphic.dataset_provenance.aln  neuronano.math_guard_binding.aln  pillar1.nano_stimuli_responsive.aln  pillar2.nanotech_bmi_flex_interfaces.aln  pillar3.neuromorphic_backend_envelope.aln  pillar4.neuro_rights_guard.aln  pillar4.neuro_smart_city_governance.aln  wasm.policy_signature_gate.aln  zero_trust_bci_kernel.aln
policy_bundles/: sample_bci_antinausia.yaml
prometheus/: README_PROMETHEUS.md  cyberaug_adjacent_scrape_config.example.yml  cyberaug_daily_scrape_config.example.yml  daily_scrape_config.example.yml  nanoswarm_write_metrics.example.txt
scripts/: aln_coverage_and_sign.sh  certify_core_nanoneuro.sh  check_no_python.sh  export_neuronano_trace_snapshot.sh  export_pillar_trace.sh  gen_dev_keys.sh  gen_tokenless_did.sh  generate_governance_regions.sh  immutable_log_sentinel.sh  nanomod_guard_proptests.sh  neuronano_security_ci_stub.sh  package_classc_release.sh  pre-commit-install.sh  pre-commit-run-sim.sh  prereq_check.sh  run_all_checks.sh  run_finishing_touch_pipeline.sh  run_finishing_touch_with_did.sh  run_finishing_touch_with_did_and_verify.sh  run_gold_standard_pipeline.sh  run_neuronano_fidelity_checks.sh  run_neuronano_guard_tests_strict.sh  run_proptests.sh  rust_classc_checks.sh  sbom_and_vuln_scan_stub.sh  sign_all_policies.sh  trace_sign.sh  validate_aln_mesh.sh  validate_aln_strict.sh  validate_nano_neuro_city.sh  validate_nanoneuro_core.sh  validate_pillars.sh  verify_all_ci.sh  verify_aln_signatures.sh  verify_classc_release.sh  verify_policy_bundle.sh  verify_tokenless_did.sh  wasm_build_stub.sh  wasm_verify.sh  wcet_mem_check.sh
specs/: BioAugClinical-Pillars-NanoNeuro-SmartCity-NeuroRights.md  NanoNeuro-Datasets.v1.aln  NanoNeuro-Datasets.v2.aln  NanoNeuro-GuardBinding.md  NanoNeuro-MathInvariants.v1.aln  NanoNeuro.NeuromorphicClinical.v1.aln  NanoNeuro.NeuromorphicUrban.v1.aln  REGULATORY-MAPPING.md  xAI.NanoNeuroIntegration.Core.v1.aln  xAI.NanoNeuroIntegration.Neuromorphic.v1.aln  xAI.NanoNeuroIntegration.v1.aln
tools/: DAILY_RESEARCH.md  _guard_codegen_src_generated_hint.adjacent.txt  aln_portable_lint.sh  daily_adjacent_cycle.sh  daily_cybernetic_cycle.sh  daily_nanoswarm_cycle.sh  daily_research_cycle.sh  find_aln.sh  print_build_modes.sh  regenerate_all_guards.sh
tools/signer-rs/: Cargo.toml
tools/signer-rs/policies/: multi_sig_merge.aln
tools/signer-rs/src/: main.rs
(+151 files in other folders)
