[workspace]
members = [
    "tools/signer-rs",
    "aln-cli",
    "aln-guard-codegen",
    "biomech-guards",
    "anti_riot_runtime",
    "augment-governance",
    "crates/nanoswarm-write-api",
    "crates/nanoswarm-edge-adapter",
]

resolver = "2"

[workspace.metadata.bioaug]
public_crates = [
    "aln-syntax",
    "aln-guard-codegen",
    "aln-cli",
    "bioaug-biomech-guards",
    "anti_riot_runtime"
]
restricted_crates = [
    "augment-governance",
    "tools/signer-rs",
    "restricted-*"
]

[features]
# Default: safe for any public-sector / general-use environment.
community-default = [
    "aln-cli/community",
    "aln-guard-codegen/community",
    "bioaug-biomech-guards/community"
]
# Restricted, policy-heavy build: only for approved sites.
clinical-le = [
    "aln-cli/clinical-le",
    "augment-governance/le-policy",
    "tools/signer-rs/hsm"
]

