[package]
name = "aln-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3"
anyhow = "1.0"
aln-syntax = { path = "../aln-syntax" }
aln-check = { path = "../aln-check" }
aln-codegen = { path = "../aln-codegen" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"

[[bin]]
name = "aln"
path = "src/main.rs"
