[package]
name = "nanoswarm-edge-adapter"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["BioAug <dev@example.com>"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
nanoswarm_write_api = { path = "../nanoswarm-write-api" }

[dev-dependencies]
