[package]
name = "nanoswarm-write-api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["BioAug <dev@example.com>"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
async-rate-limiter = "0.2"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time"] }
axum = "0.7"
hyper = { version = "1", features = ["full"] }

[dev-dependencies]
proptest = "1.5"
