[package]
name = "signer-rs"
version = "0.1.0"
authors = ["Bio-Aug Contributors <security@bio-aug.example>"]
edition = "2021"

[dependencies]
structopt = "0.3"
anyhow = "1.0"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ring = "0.16"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.5"
cryptoki = { version = "0.5", optional = true }
